--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
