--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "js-cookie": "^3.0.1",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.2"
   }
 }
