--- a/app/package.json
+++ b/app/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.2"
+    "@types/js-cookie": "^3.0.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
