--- a/api/package.json
+++ b/api/package.json
@@ -29,27 +29,31 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.0.11",
-    "@nestjs/websockets": "^9.0.11",
-    "express": "^4.18.1",
-    "socket.io": "^4.5.1",
-    "uuid": "^9.0.0",
-    "uuidv4": "^6.2.13",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.0.11",
+    "@types/cookie-parser": "^1.4.3",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "logger": "^0.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
+    "qrcode": "^1.5.1",
     "react-router-dom": "^6.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.9"
+    "socket.io": "^4.5.1",
+    "speakeasy": "^2.0.0",
+    "typeorm": "^0.3.9",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
