backend renamed to api, trying to update a user entry

--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.0.11",
     "@types/cookie-parser": "^1.4.3",
+    "@types/qrcode": "^1.5.0",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -64,6 +65,7 @@
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/speakeasy": "^2.0.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
