--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "db:dev:init": "prisma migrate dev",
+    "db:dev:deploy": "prisma migrate deploy",
+    "db:dev:rm": "docker-compose rm -s db && rm -rf ../mydatabase",
+    "db:dev:up": "docker-compose up db -d",
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 10 && npm run db:dev:deploy",
+
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -29,27 +35,29 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.0.11",
-    "@nestjs/websockets": "^9.0.11",
-    "express": "^4.18.1",
-    "socket.io": "^4.5.1",
-    "uuid": "^9.0.0",
-    "uuidv4": "^6.2.13",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.0.11",
+    "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "logger": "^0.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
+    "prisma": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.9"
+    "socket.io": "^4.5.1",
+    "typeorm": "^0.3.9",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
