--- a/api/.env
+++ b/api/.env
@@ -5,3 +5,6 @@ JWT_SECRET_KEY= 'NobodyWillEverGuessThis'
 
 TWO_FA_42="Transcend"
 TWO_FA_SECRET="AVerySecretSecret"
+JWT_SECRET_KEY= 'NobodyWillEverGuessThis'
+
+DATABASE_URL="postgresql://admin:pass@localhost:5432/trans_db?schema=public"
