--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,6 @@
     "db:dev:rm": "docker-compose rm -s db && rm -rf ../mydatabase",
     "db:dev:up": "docker-compose up db -d",
     "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 10 && npm run db:dev:deploy",
-
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -37,16 +36,12 @@
     "@nestjs/platform-socket.io": "^9.0.11",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.0.11",
-<<<<<<< HEAD
     "@prisma/client": "^4.3.1",
-=======
-    "@types/cookie-parser": "^1.4.3",
     "@types/qrcode": "^1.5.0",
->>>>>>> fbf85c922ed436d7be67972c944a22f7abb0c73d
+    "@types/speakeasy": "^2.0.7",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "logger": "^0.0.1",
@@ -55,12 +50,14 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
+    "prisma": "^4.3.1",
     "qrcode": "^1.5.1",
     "react-router-dom": "^6.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.1",
+    "speakeasy": "^2.0.0",
     "typeorm": "^0.3.9",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
@@ -74,7 +71,6 @@
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/speakeasy": "^2.0.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
