--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "5432:5432"
     volumes:
       - ./mydatabase:/var/lib/postgresql/data:z
-    network_mode: "host"
+    # network_mode: "host"
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: pass
