--- a/api/package.json
+++ b/api/package.json
@@ -47,6 +47,7 @@
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "password-sheriff": "^1.1.1",
     "pg": "^8.8.0",
     "react-router-dom": "^6.3.0",
     "reflect-metadata": "^0.1.13",
