api work with db in docker

--- a/api/.env
+++ b/api/.env
@@ -11,4 +11,4 @@ JWT_SECRET_KEY='NobodyWillEverGuessThis'
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://admin:pass@localhost:5432/trans_db?schema=public"
+DATABASE_URL="postgresql://admin:pass@db:5432/trans_db?schema=public"
