--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: db
     restart: always
     ports:
-      - "5432:5432"
+      - 5432:5432
     volumes:
       - ./mydatabase:/var/lib/postgresql/data:z
     environment:
@@ -20,6 +20,7 @@ services:
     restart: always
     ports: 
       - 6006:6006
+      - 6005:6005
       - 3030:3030
     links: 
       - db
@@ -28,3 +29,17 @@ services:
     depends_on:
       - db
     command: "sh -c 'chmod -R 777 /root && cd /app && npm install && npx prisma migrate dev && npm run start:dev'"
+  
+  app:
+    image: node:18-alpine
+    container_name: app
+    restart: always
+    ports: 
+      - 3000:3000
+    links: 
+      - db
+    volumes:
+      - ./app:/app
+    depends_on:
+      - api
+    command: "sh -c 'chmod -R 777 /root && cd /app && npm install && npm run start'"
