--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,26 +18,26 @@ services:
     image: node:18-alpine
     container_name: api
     restart: always
-    ports: 
+    ports:
       - 6006:6006
       - 6005:6005
       - 3030:3030
       - 5555:5555
-    links: 
+    links:
       - db
     volumes:
       - ./api:/app
     depends_on:
       - db
-    command: "sh -c 'chmod -R 777 /root && cd /app && npm install && npx prisma migrate dev && npm run start:dev'"
+    command: "sh -c 'chmod -R 777 /root && cd /app && npm install && npx prisma migrate deploy && npm run start:dev'"
 
   app:
     image: node:18-alpine
     container_name: app
     restart: always
-    ports: 
+    ports:
       - 3000:3000
-    links: 
+    links:
       - db
     volumes:
       - ./app:/app
