--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./mydatabase:/var/lib/postgresql/data:z
+      - ./mydatabase:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: pass
