--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - ./api:/app
     depends_on:
       - db
-    command: "sh -c 'chmod -R 777 /root && cd /app && npm install && npx prisma migrate deploy && npm run start:dev'"
+    command: "sh -c 'chmod -R 777 /root && cd /app && npm install && npx prisma migrate dev && npm run start:dev'"
 
   app:
     image: node:18-alpine
